# tree-traversals

./: .gitignore  .vimrc  ChangeLog.md  LICENSE  Makefile  README.md  README_DEV.md  Tree.hs  doctests.hs  gfm.css  tree-traversals.cabal
src/: Drawing.hs  Tree.hs
src/Control/Applicative/: Batch.hs  Phases.hs
src/Control/Applicative/Trans/: Plan.hs
src/Data/: BinaryTree.hs
src/Data/Monoid/: TreeDiagram.hs
src/Data/Traversable/: BinaryTree.hs  Forest.hs  Tree.hs  TreeLike.hs
src/Data/Traversable/Tree/: Binary.hs
src/Data/Tree/: Binary.hs  PrettyPrinter.hs
src/Data/Tree/Binary/: PrettyPrinter.hs
src/PrettyPrinter/: BinaryTree.hs  Forest.hs  Tree.hs
