name:                tree-traversals
version:             0.1.0.0
synopsis:            Functions and newtype wrappers for traversing Trees
description:         
  The tree-traversals package defines 'Control.Lens.Traversal.Traversal's for
  binary and rose trees, where
  .
  > type Traversal s t a b = forall f. Applicative f => (a -> f b) -> s -> f t 
  .
  As each type of tree may be traversed in multiple ways (in
  <https://en.wikipedia.org/wiki/Tree_traversal#Types pre-order, post-order, level-order, and sometimes in-order>),
  the package also provides newtype wrappers for the various traversals so they
  may be used with 'traverse'.
  .
  To implement the various breadth-first orders, the tree-traversals package
  provides the 'Control.Applicative.Batch' Applicative transformer, which 
  may also be useful to users seeking to implement breadth-first traversals
  for their own tree types.

homepage:            https://github.com/rampion/tree-traversals
license:             PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
                  ,  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/rampion/tree-traversals.git

source-repository this
  type: git
  location: git://github.com/rampion/tree-traversals.git
  tag: v0.1.0.0

flag Development
  description: Enable all warnings and upgrade warnings to errors
  default: False
  manual: True

library
  exposed-modules: Control.Applicative.Phases
                 , Data.BinaryTree
                 , Data.Traversable.TreeLike
  other-modules: Drawing
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
               ,       containers 
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Wall -Wextra -Werror

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends: base
               , doctest >=0.13 && <0.14
               , containers 
               , mtl
  default-language: Haskell2010
  if flag(development)
    ghc-options: -Wall -Wextra -Werror
